--- a/src/views/styles/styles.css
+++ b/src/views/styles/styles.css
@@ -1,10 +1,15 @@
 :root {
 	--background-color: rgb(69, 73, 72);
-	--background-content-color: rgb(232, 208, 222);
-	--text-color: #454948;
+	--background-content-color: #fff;
 	--link-color: #454948;
-	--underline-color: #6f7876;
+	--underline-color: rgb(157, 157, 157);
 	--decorative-color: rgb(69, 73, 72);
+	--h1-color: rgb(0, 0, 0);
+	--h2-color: rgb(40, 40, 40);
+	--h3-color: rgb(60, 60, 60);
+	--text-color: rgb(65, 65, 65);
+	--border-color: #46DF86;
+	--sections-gap: 32px;
 }
 
 *,
@@ -20,10 +25,10 @@ body {
 	min-height: 100vh;
 	margin: 30px;
 	font-family: Arial, sans-serif;
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 400;
 	font-style: normal;
-	line-height: 1.6;
+	line-height: 1.5;
 	color: var(--text-color);
 	background: var(--background-color);
 }
@@ -44,31 +49,27 @@ body {
 	align-items: baseline;
 }
 .rename-this-class > *:not(:last-child) {
-	margin-right: 20px;
+	margin-right: 16px;
 }
 
 .link {
-	text-decoration: none;
-	color: var(--link-color);
-	border-bottom: 1px solid var(--underline-color);
+	color: var(--text-color);
+	border-width: 1px;
+	border-color: var(--underline-color);
 }
 
 /* Header */
 
 .header {
-	/* height: 100%; */
-	display: flex;
-	flex-direction: column;
 	margin-bottom: 20px;
-	padding-bottom: 24px;
-	border-bottom: 5px solid var(--decorative-color);
+	padding: 0 0 var(--sections-gap);
+	border-bottom: 1px solid var(--border-color);
 }
 
 .header__contacts-list {
 	display: inline-flex;
-	/* align-content: space-between; */
-	flex-wrap: wrap;
 	align-items: start;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -83,45 +84,29 @@ body {
 	align-items: center;
 } */
 
-.header__contact-link-pdf {
-	display: none;
-}
-
-.header__desc {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: 1fr;
-}
-.header__desc > *:not(:last-child){
-	margin-right: 20px;
-}
-
 .header__title {
 	grid-area: 1 / 1 / 2 / 3;
-	font-size: 48px;
-	line-height: 1.1;
+	margin: 0;
+	font-family: 'Arial black';
+	font-size: 31px;
+	font-weight: 800;
 	font-style: normal;
-	font-weight: 700;
+	line-height: 1.1;
+	color: var(--h1-color);
 }
 
 .header__job {
 	grid-area: 2 / 1 / 2 / 3;
-	font-size: 32px;
-	font-style: normal;
+	margin-top: 0;
+	margin-bottom: 12px;
+	padding-top: 4px;
+	font-size: 24px;
 	font-weight: 600;
+	font-style: normal;
 	line-height: 1.1;
+	color: var(--h2-color);
 }
 
-.header__link {
-	grid-area: 1 / 3 / 2 / 4;
-	display: inline-flex;
-	align-items: center;
-	margin-left: auto;
-	gap: 4px;
-	border: 3px solid var(--underline-color);
-	padding: 4px 12px;
-	border-radius: 15px;
-}
 
 /* Body content */
 
@@ -135,12 +120,14 @@ body {
 }
 
 .main__title {
-	margin: 40px 0 20px;
-	padding-top: 8px;
-	font-size: 32px;
-	font-style: normal;
+	margin: var(--sections-gap) 0 16px;
+	padding-top: var(--sections-gap);
+	font-size: 25px;
 	font-weight: 600;
+	font-style: normal;
 	line-height: 1.1;
+	color: var(--h2-color);
+	border-top: 1px solid var(--border-color);
 }
 
 .main__job + .main__job {
@@ -148,14 +135,20 @@ body {
 }
 
 .main__job-title {
-	font-size: 24px;
-	font-style: normal;
+	font-size: 18px;
 	font-weight: 600;
-	line-height: 1.2;
+	font-style: normal;
+	line-height: 1.1;
+	color: var(--h3-color);
+}
+
+.main__job-info {
+	font-size: 18px;
+	line-height: 1.3;
 }
 
 .main__job-list {
-	margin-top: 16px;
+	margin-top: 8px;
 	margin-left: 32px;
 	padding: 0;
 }
