refactor: remove data for website

--- a/src/views/partials/header.njk
+++ b/src/views/partials/header.njk
@@ -35,7 +35,7 @@
 						href="{{ cv.personal.link["url"] }}"
 					>
 						<span class="header__contact-link-pdf">
-							{{ cv.personal.link["pdf label"] }}
+							{{ cv.personal.link["label"] }}
 						</span>
 					</a>
 				</li>
@@ -45,7 +45,7 @@
 						href="{{ cv.personal.portfolio["url"] }}"
 					>
 						<span class="header__contact-link-pdf">
-							{{ cv.personal.portfolio["pdf label"] }}
+							{{ cv.personal.portfolio["label"] }}
 						</span>
 					</a>
 				</li>
